--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,9 +1,4 @@
-$sidebar-color: #1ee89b;
-$sidebar-color-light: #00ff9d;
-$sidebar-color-em: #1cd991;
-
-$sidebar-color2: #e88aff;
-$sidebar-color2-em: #cc6be3;
+@import 'colors.scss';
 
 .container-fluid {
   height: 100%;
