--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,8 +2,6 @@
 html, body {
   margin: 0;
   padding: 0;
-
-
   height: 100vh;
   width: 100vw;
   overflow: auto;
@@ -14,6 +12,11 @@ html, body {
   padding-left: 0!important;
 }
 
+.no-padding{
+  padding-right: 0;
+  padding-left: 0;
+}
+
 .noselect {
   -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
@@ -22,4 +25,8 @@ html, body {
         -ms-user-select: none; /* Internet Explorer/Edge */
             user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
+}
+
+.selectable{
+  cursor: pointer;
 }
