Added better looking scrollbars and the content fits on one page

--- a/src/app/components/copymode/copymode.component.html
+++ b/src/app/components/copymode/copymode.component.html
@@ -51,24 +51,28 @@
             </div>
           </div>
 
-          <div *ngFor="let header of wbToHeaders[workbook.filename]">
-            <div class="col">
-              <div class="content-box white-border row" *ngIf="header.toLowerCase().includes(searchText.toLowerCase())" (contextmenu)="onRightClick($event, header); false">
-                <span class="">
-                  <span (click)="setActiveText(header)" class="cb-title noselect selectable">{{ header }}</span>
-                  <i class="fas fa-check-circle header-icon hi-selected"
-                  *ngIf="isSelected(workbook.filename, header)" (click)="checkMarkClicked(workbook.filename, header)"></i>
-                  <i class="far fa-check-circle header-icon hi-unselected"
-                  *ngIf="!isSelected(workbook.filename, header)" (click)="checkMarkClicked(workbook.filename, header)"></i>
+          <div class="scroll-container">
+            <div class="scrollbox">
+              <div *ngFor="let header of wbToHeaders[workbook.filename]">
+                <div class="col">
+                  <div class="content-box white-border row" *ngIf="header.toLowerCase().includes(searchText.toLowerCase())" (contextmenu)="onRightClick($event, header); false">
+                    <span class="">
+                      <span (click)="setActiveText(header)" class="cb-title noselect selectable">{{ header }}</span>
+                      <i class="fas fa-check-circle header-icon hi-selected"
+                      *ngIf="isSelected(workbook.filename, header)" (click)="checkMarkClicked(workbook.filename, header)"></i>
+                      <i class="far fa-check-circle header-icon hi-unselected"
+                      *ngIf="!isSelected(workbook.filename, header)" (click)="checkMarkClicked(workbook.filename, header)"></i>
 
-                  <i class="fas fa-key header-icon"
-                  [ngClass]="{'hi-unselected': !getIfKey(workbook.filename, header) && !getIfKeyHasFilename(workbook.filename),
-                  'hi-selected': getIfKey(workbook.filename, header),
-                  'no-show': getIfKeyHasFilename(workbook.filename) && !getIfKey(workbook.filename, header),
-                  'hidden-hicon': !getIfKeyHasFilename(workbook.filename)}"
-                  (click)="setKey(workbook.filename, header)">
-                  </i>
-                </span>
+                      <i class="fas fa-key header-icon"
+                      [ngClass]="{'hi-unselected': !getIfKey(workbook.filename, header) && !getIfKeyHasFilename(workbook.filename),
+                      'hi-selected': getIfKey(workbook.filename, header),
+                      'no-show': getIfKeyHasFilename(workbook.filename) && !getIfKey(workbook.filename, header),
+                      'hidden-hicon': !getIfKeyHasFilename(workbook.filename)}"
+                      (click)="setKey(workbook.filename, header)">
+                      </i>
+                    </span>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
