--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -32,7 +32,7 @@
         <li>
             <a href="#" (click)="refreshFiles()">
                 <i class="fas fa-sync"></i>
-                Load Files
+                Refresh Files
             </a>
             <a href="#modeOpen" data-toggle="collapse" class="dropdown-toggle">
                 <i class="far fa-folder-open"></i>
