--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,3 +30,20 @@ html, body {
 .selectable{
   cursor: pointer;
 }
+
+body::-webkit-scrollbar {
+  width: 11px;
+  margin: 3px 0;
+}
+
+/* Track */
+body::-webkit-scrollbar-track {
+  background-color: #eee;
+  border-radius: 10px;
+}
+
+/* Handle */
+body::-webkit-scrollbar-thumb {
+  background: rgba(200,200,200,0.6);;
+  border-radius: 10px;
+}
