Changed column preview color

--- a/src/app/components/copymode/copymode.component.scss
+++ b/src/app/components/copymode/copymode.component.scss
@@ -176,7 +176,7 @@ input {
 
 .preview-cell-container{
   border-radius: 10px;
-  background-color: #ddd;
+  background-color: #eee;
   padding: 5px;
   height: 100%;
   overflow-y: scroll;
