I suppose the HTML is a little more readable for now....

--- a/src/app/components/copymode/copymode.component.scss
+++ b/src/app/components/copymode/copymode.component.scss
@@ -187,8 +187,14 @@ input {
   padding: 3px;
 }
 
-.purple-text {
-  color: $sidebar-color2-em;
+.col-preview-row-text {
+  color: white;
+  background-color: $sidebar-color2-em;
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  text-align: center;
+  display: inline-block;
 }
 
 /* IDs */
