--- a/src/app/components/copymode/copymode.component.html
+++ b/src/app/components/copymode/copymode.component.html
@@ -1,26 +1,26 @@
 <!-- Page Content  -->
-<div class="container-fluid">
+<main class="container-fluid">
   <!-- Lorem ipsum is here to fill up the screen width for now...
     I wish I was better at this -->
-  <div style="font-size: 8px; color: #fff;" class="noselect">
+  <section style="font-size: 8px; color: #fff;" class="noselect">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit,
     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
     ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
     velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
     sunt in culpa qui officia deserunt mollit anim id est laborum.
-  </div>
+  </section>
 
-  <div *ngIf="!openWorkbooks.length">
+  <section *ngIf="!openWorkbooks.length">
     <h4 style="color: #333;margin-top: 2em;margin-left: 2em;">No workbooks open currently. One can be opened from the sidebar.</h4>
-  </div>
+  </section>
 
-  <div class="row" *ngIf="openWorkbooks.length">
+  <section class="row" *ngIf="openWorkbooks.length">
     <div class="row col-sm-5" *ngFor="let workbook of openWorkbooks">
       <div class="col">
         <div id="encompass">
           <!-- Action Bar -->
-          <div class="col">
+          <article class="col">
             <div class="row" id="actionbar-container">
               <span id="actionbar">
                 <span class="actionbar-item actionbar-text" [ngClass]="{'inactive': header===activeTextfield}">
@@ -34,27 +34,28 @@
               <input class="search-field form-control" [(ngModel)]="searchText"
               name="searchText" placeholder="Header Search" [ngClass]="{'active': header===activeTextfield}" (click)="headerSearchbarClicked()">
             </div>
-          </div>
+          </article>
 
           <!-- Content -->
-          <div class="col">
+          <article class="col">
             <div class="content-box purple-border selectable row justify-content-center"
             *ngIf="editCount >= 1 && primaryKey.split(':')[0] == workbook.filename" (click)="saveFile(workbook)">
               Save
             </div>
-          </div>
-          <div class="col">
+          </article>
+          <article class="col">
             <div class="content-box purple-border selectable row justify-content-center"
             *ngIf="selectedHeader.length && mappedHeader.length && getKeyFile(workbook.filename) == 1" (click)="copyColumns()">
               Copy {{ secondaryKey.split(":")[0] }} column {{ mappedHeader.split(":")[1] }} to
               {{ primaryKey.split(":")[0] }} column {{ selectedHeader.split(":")[1] }}?
             </div>
-          </div>
+          </article>
 
-          <div class="scroll-container">
+          <article class="scroll-container">
             <div class="scrollbox">
               <div *ngFor="let header of wbToHeaders[workbook.filename]">
                 <div class="col">
+
                   <div class="content-box white-border row"
                   *ngIf="header.toLowerCase().includes(searchText.toLowerCase())"
                   (contextmenu)="onRightClick($event, header); false">
@@ -80,20 +81,25 @@
                       <div class="preview-scroller-container">
                         <div class="preview-cell-container">
                           <div *ngFor="let cell of headerToCells[workbook.filename][header]" class="content-box white-border">
-                            <span><span class="purple-text">{{ cell.row }}</span>: {{ cell.value }}</span>
+                            <span>
+                              <span class="col-preview-row-text">
+                                {{ cell.row }}
+                              </span> {{ cell.value }}
+                            </span>
                           </div>
                         </div>
                       </div>
                     </div>
                   </div>
+
                 </div>
               </div>
             </div>
-          </div>
+          </article>
 
         </div>
       </div>
     </div>
-  </div>
+  </section>
 
-</div>
+</main>
