Column preview rows are now rectangles so they can scale up

--- a/src/app/components/copymode/copymode.component.html
+++ b/src/app/components/copymode/copymode.component.html
@@ -83,6 +83,12 @@
                           <div *ngFor="let cell of headerToCells[workbook.filename][header]" class="content-box white-border">
                             <span>
                               <span class="col-preview-row-text">
+                                1
+                              </span>
+                              <span class="col-preview-icon">
+                                <i class="fas fa-arrow-right"></i>
+                              </span>
+                              <span class="col-preview-row-text">
                                 {{ cell.row }}
                               </span> {{ cell.value }}
                             </span>
