--- a/src/colors.scss
+++ b/src/colors.scss
@@ -5,6 +5,6 @@ $sidebar-color-em: #1cd991;
 
 $sidebar-color2: #e88aff;
 $sidebar-color2-em: #cc6be3;
-$sidebar-color2-dark: #af54c4;
+$sidebar-color2-dark: #a74bbd;
 $sidebar-highlight-text-color: #333;
 $sidebar-text-color: #333;
