--- a/src/app/components/copymode/copymode.component.html
+++ b/src/app/components/copymode/copymode.component.html
@@ -11,12 +11,12 @@
     sunt in culpa qui officia deserunt mollit anim id est laborum.
   </section>
 
-  <section *ngIf="!openWorkbooks.length">
+  <section *ngIf="!currentWorkbooks.length">
     <h4 style="color: #333;margin-top: 2em;margin-left: 2em;">No workbooks open currently. One can be opened from the sidebar.</h4>
   </section>
 
-  <section class="row" *ngIf="openWorkbooks.length">
-    <div class="row col-sm-5" *ngFor="let workbook of openWorkbooks">
+  <section class="row" *ngIf="currentWorkbooks.length">
+    <div class="row col-sm-5" *ngFor="let workbook of currentWorkbooks">
       <div class="col">
         <div id="encompass">
           <!-- Action Bar -->
@@ -53,7 +53,7 @@
 
           <article class="scroll-container">
             <div class="scrollbox">
-              <div *ngFor="let header of wbToHeaders[workbook.filename]">
+              <div *ngFor="let header of workbook.headers">
                 <div class="col">
 
                   <div class="content-box white-border row"
@@ -80,7 +80,7 @@
                     <div *ngIf="header === columnPreviews[workbook.filename]" class="preview-container col-sm-12">
                       <div class="preview-scroller-container">
                         <div class="preview-cell-container">
-                          <div *ngFor="let cell of headerToCells[workbook.filename][header]" class="content-box white-border">
+                          <div *ngFor="let cell of workbook.getCellsFromHeader(header)" class="content-box white-border">
                             <span>
                               <span class="col-preview-row-text"
                               *ngIf="primaryKey.split(':')[0] == workbook.filename">
