--- a/src/app/components/copymode/copymode.component.html
+++ b/src/app/components/copymode/copymode.component.html
@@ -27,7 +27,7 @@
                   {{ workbook.filename.split('.')[0] }}
                 </span>
                 <i class="fas fa-times actionbar-item actionbar-icon" (click)="closeFile(workbook.filename)"></i>
-                <span class="actionbar-text"> {{ getKeyText(workbook.filename) }}</span>
+                <span class="actionbar-text"> {{ keyService.getKeyTypeText(workbook.filename) }}</span>
               </span>
             </div>
             <div class="row search-container">
@@ -39,15 +39,15 @@
           <!-- Content -->
           <article class="col">
             <div class="content-box purple-border selectable row justify-content-center"
-            *ngIf="editCount >= 1 && primaryKey.split(':')[0] == workbook.filename" (click)="saveFile(workbook)">
+            *ngIf="editCount >= 1 && keyService.primaryFile == workbook.filename" (click)="saveFile(workbook)">
               Save
             </div>
           </article>
           <article class="col">
             <div class="content-box purple-border selectable row justify-content-center"
-            *ngIf="copyToHeader.length && copyFromHeader.length && getKeyFile(workbook.filename) == 1" (click)="copyColumns()">
-              Copy {{ secondaryKey.split(":")[0] }} column {{ copyFromHeader.split(":")[1] }} to
-              {{ primaryKey.split(":")[0] }} column {{ copyToHeader.split(":")[1] }}?
+            *ngIf="copyToHeader.length && copyFromHeader.length && keyService.getWhichKeyFileIn(workbook.filename) == 1" (click)="copyColumns()">
+              Copy {{ keyService.secondaryFile }} column {{ copyFromHeader.split(":")[1] }} to
+              {{ keyService.primaryFile }} column {{ copyToHeader.split(":")[1] }}?
             </div>
           </article>
 
@@ -65,9 +65,11 @@
                         {{ header }}
                       </span>
                       <i class="fas fa-check-circle header-icon hi-selected"
-                      *ngIf="isSelected(workbook.filename, header)" (click)="!keyService.doBothKeysExist() || checkMarkClicked(workbook.filename, header)"></i>
+                      *ngIf="isSelected(workbook.filename, header)"
+                      (click)="!keyService.doBothKeysExist() || checkMarkClicked(workbook.filename, header)"></i>
                       <i class="far fa-check-circle header-icon hi-unselected"
-                      *ngIf="!isSelected(workbook.filename, header)" (click)="!keyService.doBothKeysExist() || checkMarkClicked(workbook.filename, header)"></i>
+                      *ngIf="!isSelected(workbook.filename, header)"
+                      (click)="!keyService.doBothKeysExist() || checkMarkClicked(workbook.filename, header)"></i>
 
                       <i class="fas fa-key header-icon"
                       [ngClass]="{'hi-unselected': !getIfKey(workbook.filename, header) && !getIfKeyHasFilename(workbook.filename),
