--- a/src/app/components/copymode/copymode.component.scss
+++ b/src/app/components/copymode/copymode.component.scss
@@ -198,6 +198,10 @@ input {
   font-size: 14px;
 }
 
+.col-preview-red-text {
+  color: red;
+}
+
 .col-preview-icon {
   margin-right: 5px;
   color: $sidebar-color2-dark;
