Compile to ES5 (ES6 .exe doesn't work) and show headers that have been edited

--- a/src/app/components/copymode/copymode.component.html
+++ b/src/app/components/copymode/copymode.component.html
@@ -61,7 +61,8 @@
                   (contextmenu)="onRightClick($event, header); false">
                     <span>
                       <span (click)="setActiveText(header)" class="cb-title noselect selectable"
-                      (click)="headerClicked(workbook.filename, header)">
+                      (click)="headerClicked(workbook.filename, header)" 
+                      [ngClass]="{'cb-title-red': rowMap.hasOwnProperty(header)}">
                         {{ header }}
                       </span>
                       <i class="fas fa-check-circle header-icon hi-selected"
