--- a/src/app/components/copymode/subcomponents/header/header.component.html
+++ b/src/app/components/copymode/subcomponents/header/header.component.html
@@ -1,43 +1,25 @@
-<div class="col">
-  <div class="content-box white-border row"
-  *ngIf="header.toLowerCase().includes(searchText.toLowerCase())"
-  (contextmenu)="onRightClick($event, header); false">
+<article class="col">
+  <div class="content-box white-border row">
     <span>
-      <span (click)="setActiveText(header)" class="cb-title noselect selectable"
-      (click)="headerClicked(workbook.filename, header)"
-      [ngClass]="{'cb-title-red': rowMap.hasOwnProperty(header)}">
+      <span class="cb-title noselect selectable">
         {{ header }}
       </span>
 
-      <i class="fas fa-check-circle header-icon hi-selected"
-      *ngIf="isSelected(workbook.filename, header)"
-      (click)="checkMarkClicked(workbook.filename, header)"></i>
-      <i class="far fa-check-circle header-icon hi-unselected"
-      *ngIf="!isSelected(workbook.filename, header)"
-      (click)="checkMarkClicked(workbook.filename, header)"></i>
+      <i class="fas fa-check-circle"></i>
+      <i class="far fa-check-circle"></i>
 
-      <i class="fas fa-not-equal header-icon hi-selected"
-      *ngIf="isDiffSelected(workbook.filename, header)"
-      (click)="diffButtonClicked(workbook.filename, header)"></i>
-      <i class="fas fa-not-equal header-icon hi-unselected"
-      *ngIf="!isDiffSelected(workbook.filename, header)"
-      (click)="diffButtonClicked(workbook.filename, header)"></i>
+      <i class="fas fa-not-equal"></i>
+      <i class="fas fa-not-equal"></i>
 
-      <i class="fas fa-key header-icon"
-      [ngClass]="{
-      'hi-unselected': !keyPairs['copy'].keyExists(workbook.filename, header) &&
-                          !keyPairs['copy'].isFilenameInKey(workbook.filename),
-      'hi-selected': keyPairs['copy'].keyExists(workbook.filename, header),
-      'no-show': keyPairs['copy'].isFilenameInKey(workbook.filename) && !keyPairs['copy'].keyExists(workbook.filename, header),
-      'hidden-hicon': !keyPairs['copy'].isFilenameInKey(workbook.filename)}"
-      (click)="keyPairs['copy'].setKey(workbook.filename, header)">
-      </i>
+      <i class="fas fa-key header-icon"></i>
     </span>
-    <div *ngIf="header === columnPreviews[workbook.filename]" class="preview-container col-sm-12">
+    <section class="preview-container col-sm-12">
       <div class="preview-scroller-container">
         <div class="preview-cell-container">
-          <div *ngFor="let cell of workbook.getCellsFromHeader(header)" class="content-box white-border">
+          <section *ngFor="let cell of workbook.getCellsFromHeader(header)" class="content-box white-border">
+
             <span>
+              <!-- After Copying -->
               <span *ngIf="keyPairs['copy'].primaryFile == workbook.filename && rowMap.hasOwnProperty(header)">
                 <span class="col-preview-row-text" *ngIf="rowMap[header].hasOwnProperty(cell.row)">
                   {{ rowMap[header][cell.row]['mappedRow'] }}
@@ -48,6 +30,7 @@
                   <i class="fas fa-arrow-right col-preview-icon"></i>
                 </span>
               </span>
+              <!-- Diff Check -->
               <span *ngIf="keyPairs['copy'].primaryFile === workbook.filename && diffMap.hasOwnProperty(header) && diffOpen">
                 <span class="col-preview-row-text" *ngIf="diffMap[header].hasOwnProperty(cell.row)">
                   {{ diffMap[header][cell.row]['mappedRow'] }}
@@ -62,9 +45,10 @@
                 {{ cell.row }}
               </span> {{ cell.value }}
             </span>
-          </div>
+
+          </section>
         </div>
       </div>
-    </div>
+    </section>
   </div>
-</div>
+</article>
