--- a/src/app/components/copymode/copymode.component.html
+++ b/src/app/components/copymode/copymode.component.html
@@ -56,7 +56,9 @@
               <div *ngFor="let header of workbook.headers">
 
                 <!-- HEADERS -->
-                
+                <app-header-box [header]="createHeader(header, workbook.filename)" (header-event)="headerEvent($event)">
+                  </app-header-box>
+
               </div>
             </div>
           </article>
