--- a/src/app/components/copymode/subcomponents/header/header.component.html
+++ b/src/app/components/copymode/subcomponents/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="content-box white-border row">
     <span>
       <span class="cb-title noselect selectable">
-        {{ header }}
+        {{ header.name }}
       </span>
 
       <i class="fas fa-check-circle"></i>
@@ -13,13 +13,14 @@
 
       <i class="fas fa-key header-icon"></i>
     </span>
+    <!--
     <section class="preview-container col-sm-12">
       <div class="preview-scroller-container">
         <div class="preview-cell-container">
           <section *ngFor="let cell of workbook.getCellsFromHeader(header)" class="content-box white-border">
 
             <span>
-              <!-- After Copying -->
+               After Copying
               <span *ngIf="keyPairs['copy'].primaryFile == workbook.filename && rowMap.hasOwnProperty(header)">
                 <span class="col-preview-row-text" *ngIf="rowMap[header].hasOwnProperty(cell.row)">
                   {{ rowMap[header][cell.row]['mappedRow'] }}
@@ -30,7 +31,7 @@
                   <i class="fas fa-arrow-right col-preview-icon"></i>
                 </span>
               </span>
-              <!-- Diff Check -->
+               Diff Check
               <span *ngIf="keyPairs['copy'].primaryFile === workbook.filename && diffMap.hasOwnProperty(header) && diffOpen">
                 <span class="col-preview-row-text" *ngIf="diffMap[header].hasOwnProperty(cell.row)">
                   {{ diffMap[header][cell.row]['mappedRow'] }}
@@ -49,6 +50,6 @@
           </section>
         </div>
       </div>
-    </section>
+    </section> -->
   </div>
 </article>
