--- a/src/app/components/copymode/subcomponents/header/header.component.html
+++ b/src/app/components/copymode/subcomponents/header/header.component.html
@@ -5,13 +5,12 @@
         {{ header.name }}
       </span>
 
-      <i class="fas fa-check-circle"></i>
+      <i class="fas fa-check-circle" (click)="switchCopyMode()"></i>
       <i class="far fa-check-circle"></i>
 
-      <i class="fas fa-not-equal"></i>
-      <i class="fas fa-not-equal"></i>
+      <i class="fas fa-not-equal" (click)="switchDiffMode()"></i>
 
-      <i class="fas fa-key header-icon"></i>
+      <i class="fas fa-key header-icon" (click)="switchKey()"></i>
     </span>
     <!--
     <section class="preview-container col-sm-12">
